--- a/messagerie.css
+++ b/messagerie.css
@@ -21,9 +21,9 @@
 
 .sg-layout__container.js-main-container {
     min-width: 100% !important;
-    margin: 0px !important;
-    padding-top: 0px !important;
-    padding-bottom: 0px !important;
+    margin: 0 !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 .brn-chatbox__chat {
